Improve size of canvas to fix blurry rendering

--- a/src/Canvas/style.css
+++ b/src/Canvas/style.css
@@ -5,5 +5,6 @@
     width: 100%;
     height: 100%;
     margin: 0;
+    object-fit: contain;
 }
 .Canvas:focus { outline: none; }
